<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/original_filter"
        android:title="@string/original"
        app:showAsAction="never"/>
    <item
        android:id="@+id/beauty_filter"
        android:title="@string/beauty"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cool_filter"
        android:title="@string/cool"
        app:showAsAction="never"/>
    <item
        android:id="@+id/early_bird_filter"
        android:title="@string/early_bird"
        app:showAsAction="never"/>
    <item
        android:id="@+id/evergreen_filter"
        android:title="@string/evergreen"
        app:showAsAction="never"/>
    <item
        android:id="@+id/n1997_filter"
        android:title="@string/n1997"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nostalgia_filter"
        android:title="@string/nostalgia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/romance_filter"
        android:title="@string/romance"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sunrise_filter"
        android:title="@string/sunrise"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sunset_filter"
        android:title="@string/sunset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/warm_filter"
        android:title="@string/warm"
        app:showAsAction="never"/>
    <item
        android:id="@+id/tender_filter"
        android:title="@string/tender"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toast_filter"
        android:title="@string/toast"
        app:showAsAction="never"/>
    <item
        android:id="@+id/valencia_filter"
        android:title="@string/valencia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/walden_filter"
        android:title="@string/walden"
        app:showAsAction="never"/>

</menu>